[gd_scene load_steps=8 format=3 uid="uid://dor3fqxsdq2n8"]

[ext_resource type="Script" uid="uid://bmi0xcjnfmbvl" path="res://ui/credit_menu.gd" id="1_01h3p"]
[ext_resource type="Texture2D" uid="uid://dhstputajfpvq" path="res://art/pause.png" id="3_ofq2q"]
[ext_resource type="Texture2D" uid="uid://dqx6624xb3kmq" path="res://art/ui.png" id="4_ifw4e"]

[sub_resource type="AtlasTexture" id="AtlasTexture_avurv"]
atlas = ExtResource("3_ofq2q")
region = Rect2(137, 591, 1193, 352)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fijdv"]
content_margin_left = 10.0
content_margin_bottom = 30.0
texture = ExtResource("4_ifw4e")
region_rect = Rect2(64, 82, 394, 152)
modulate_color = Color(0.664755, 0.6097, 0.91, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6ap7o"]
content_margin_left = 10.0
content_margin_bottom = 30.0
texture = ExtResource("4_ifw4e")
region_rect = Rect2(64, 82, 394, 152)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6ap7o"]

[node name="Credit" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_01h3p")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.63, 0.63, 0.301961)

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 1
offset_left = -380.0
offset_top = -203.0
offset_right = 1573.0
offset_bottom = 683.0
rotation = 6.43162
scale = Vector2(0.479999, 0.479999)
texture = SubResource("AtlasTexture_avurv")

[node name="Kay" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -295.0
offset_top = -109.0
offset_right = 178.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_pressed_color = Color(1, 0.67451, 0.329412, 1)
theme_override_colors/font_hover_color = Color(1, 0.67451, 0.329412, 1)
theme_override_colors/font_outline_color = Color(0.721569, 0.329412, 0.321569, 1)
theme_override_colors/font_color = Color(0.952941, 0.772549, 0.584314, 1)
theme_override_colors/font_focus_color = Color(1, 0.67451, 0.329412, 1)
theme_override_colors/font_pressed_color = Color(1, 0.67451, 0.329412, 1)
theme_override_constants/outline_size = 21
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxTexture_fijdv")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_fijdv")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_fijdv")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_fijdv")
theme_override_styles/hover = SubResource("StyleBoxTexture_fijdv")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_fijdv")
theme_override_styles/pressed = SubResource("StyleBoxTexture_fijdv")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_6ap7o")
theme_override_styles/normal = SubResource("StyleBoxTexture_6ap7o")
text = "Kay Illustrations"

[node name="mumbo" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -293.0
offset_top = 29.0
offset_right = 175.0
offset_bottom = 174.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_pressed_color = Color(1, 0.67451, 0.329412, 1)
theme_override_colors/font_hover_color = Color(1, 0.67451, 0.329412, 1)
theme_override_colors/font_outline_color = Color(0.721569, 0.329412, 0.321569, 1)
theme_override_colors/font_color = Color(0.952941, 0.772549, 0.584314, 1)
theme_override_colors/font_focus_color = Color(1, 0.67451, 0.329412, 1)
theme_override_colors/font_pressed_color = Color(1, 0.67451, 0.329412, 1)
theme_override_constants/outline_size = 21
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxTexture_fijdv")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_fijdv")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_fijdv")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_fijdv")
theme_override_styles/hover = SubResource("StyleBoxTexture_fijdv")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_fijdv")
theme_override_styles/pressed = SubResource("StyleBoxTexture_fijdv")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_6ap7o")
theme_override_styles/normal = SubResource("StyleBoxTexture_6ap7o")
text = "supermumbo"

[node name="x" type="Button" parent="Control"]
layout_mode = 1
offset_left = -265.0
offset_top = -146.0
offset_right = -212.0
offset_bottom = -96.0
theme_override_colors/font_hover_pressed_color = Color(1, 0.854902, 0.552941, 1)
theme_override_colors/font_hover_color = Color(1, 0.854902, 0.552941, 1)
theme_override_colors/font_color = Color(1, 0.67451, 0.329412, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_6ap7o")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_6ap7o")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_6ap7o")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_6ap7o")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_6ap7o")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_6ap7o")
theme_override_styles/hover = SubResource("StyleBoxEmpty_6ap7o")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_6ap7o")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6ap7o")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_6ap7o")
theme_override_styles/normal = SubResource("StyleBoxEmpty_6ap7o")
text = "x"

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 213.0
offset_top = -59.0
offset_right = 405.0
offset_bottom = 37.0
theme_override_colors/font_color = Color(1, 0.67451, 0.329412, 1)
theme_override_font_sizes/font_size = 30
text = "Designer
Artist
Programmer"

[node name="Label2" type="Label" parent="Control"]
layout_mode = 0
offset_left = 213.0
offset_top = 89.0
offset_right = 450.0
offset_bottom = 155.0
theme_override_colors/font_color = Color(1, 0.67451, 0.329412, 1)
theme_override_font_sizes/font_size = 30
text = "Musician
Sound Designer"

[connection signal="pressed" from="Control/Kay" to="." method="_on_kay_pressed"]
[connection signal="pressed" from="Control/mumbo" to="." method="_on_mumbo_pressed"]
[connection signal="pressed" from="Control/x" to="." method="_on_x_pressed"]
